--- a/coding/webapi-message-handlers/index.html
+++ b/coding/webapi-message-handlers/index.html
@@ -11,7 +11,7 @@
   <meta name="description" content="&lt;a href=&quot;https://kosalanuwan.github.io&quot;&gt;&lt;span&gt;@&lt;/span&gt;kosalanuwan&lt;/a&gt;'s developer journal. This bliki, its content, and opinions are my own.">
 
   
-    <meta name="keywords" content="etc">
+    <meta name="keywords" content="coding">
   
 
   
@@ -20,11 +20,11 @@
 
   <title>
     
-      Hello world :wave: &middot; #bliki
+      Message Handlers on Web API vs. MVC &middot; #bliki
     
   </title>
 
-  <link rel="canonical" href="https://kosalanuwan.github.io/bliki/etc/hello-world/">
+  <link rel="canonical" href="https://kosalanuwan.github.io/bliki/coding/webapi-message-handlers/">
   <link rel="alternate" type="application/rss+xml" title="RSS Feed for #bliki" href="https://kosalanuwan.github.io/bliki/atom.xml">
   <!-- Fonts -->
   <link rel="dns-prefetch" href="//fonts.googleapis.com">
@@ -57,8 +57,7 @@
   
 </header>
       <hr>
-      <h2>Hello world <img class="emoji" title=":wave:" alt=":wave:" src="https://github.githubassets.com/images/icons/emoji/unicode/1f44b.png" height="20" width="20">
-</h2>
+      <h2>Message Handlers on Web API vs. MVC</h2>
 
 
 
@@ -83,26 +82,11 @@
 
 
 <article>
-  <p>Here’s why I gave up all those wide spread of productivity and notes taking apps from Evernote to Onenote, Workflowy, Trello, Todoist, and even Notion. They are all great apps, but it makes more sense, at least for me, to use GitHub since I interact with it daily, so why not use it for everything else. <em>GitHub used to be my unicorn, and now it is my bitch</em>. Just a personal preference, with <img class="emoji" title=":heart:" alt=":heart:" src="https://github.githubassets.com/images/icons/emoji/unicode/2764.png" height="20" width="20"> of course.</p>
+  <p>If you were wondering, have a look at <a href="https://github.com/auth0-samples/aspnet-samples/blob/master/Samples/webapi/Api/App_Start/JsonWebTokenValidationHandler.cs">this auth0 sample code snippet on asp.net</a>. It uses <code class="language-plaintext highlighter-rouge">MessageHandlers</code> to wire access token validation. I tried to do the same with an MVC web app but had hard luck <img class="emoji" title=":-1:" alt=":-1:" src="https://github.githubassets.com/images/icons/emoji/unicode/1f44e.png" height="20" width="20"> getting it to work, and here’s why it is was a terrible idea.</p>
 
-<p>In case you were wondering, this site is:</p>
+<p><a href="https://stackoverflow.com/a/35905246/257727"><code class="language-plaintext highlighter-rouge">MessageHandlers</code> are part of the Web API Pipeline</a> and won’t work with MVC web apps. Also, there were <a href="https://stackoverflow.com/a/9495189/257727">some considerable differences between the two kinds of controllers</a>, one meant to serve views and the other meant to serve data. <a href="https://docs.microsoft.com/en-us/archive/blogs/kiranchalla/content-negotiation-in-asp-net-mvc4-web-api-beta-part-1">The Content Negotiation Algorithm (Conneg) in the ASP.NET stack</a> is a good source of information regarding how request/response were acknowledged based on <code class="language-plaintext highlighter-rouge">Accept</code> header and the <code class="language-plaintext highlighter-rouge">Content-Type</code>.</p>
 
-<ul>
-  <li>
-<img class="emoji" title=":lock:" alt=":lock:" src="https://github.githubassets.com/images/icons/emoji/unicode/1f512.png" height="20" width="20"> Designed from the <a href="https://github.com/kosalanuwan/otto-theme">Otto Theme</a>
-</li>
-  <li>Coded with <a href="https://github.com/microsoft/vscode">VS Code</a>
-</li>
-  <li>Built on <a href="https://github.com/envygeeks/jekyll-docker">Jekyll Docker</a>
-</li>
-  <li>Published with <a href="https://github.com/peaceiris/actions-gh-pages">GitHub Actions for GitHub Pages</a>, and</li>
-  <li>Hosted on <a href="https://github.com/kosalanuwan/kosalanuwan.github.io">GitHub Pages</a>
-</li>
-</ul>
-
-<p>And, this article amongst rest are written in <a href="">Markdown</a> with <a href="">Paper app</a>.</p>
-
-<p>For starters, you want to have a look at <a href="">Docsify</a>. It is a documentation site generator with <a href="">a great community support</a>. <a href="">Awesome Docsify</a> is a good source of information. <a href="">I played around a bit with Docsify</a> and <a href="">wrote a plugin or two</a> as well for my needs, but that was before I picked Jekyll and it’s still a work in-progress.</p>
+<p>And for the MVC web apps, a possible fix, or rather an alternative to <code class="language-plaintext highlighter-rouge">MessageHandlers</code> was <a href="https://docs.microsoft.com/en-us/aspnet/mvc/overview/older-versions/hands-on-labs/aspnet-mvc-4-custom-action-filters">to write a Custom Action Filter</a>, otherwise move the backend API endpoints to a <a href="https://www.tutlane.com/tutorial/aspnet-mvc/create-use-asp-net-web-api-service-in-asp-net-mvc-application-with-example">Web API within the MVC app</a>.</p>
 
 </article>
       <hr>
