--- a/coding/webapi-message-handlers/index.html
+++ b/coding/webapi-message-handlers/index.html
@@ -32,7 +32,7 @@
   <!-- Icons -->
   <link rel="shortcut icon" href="/bliki/assets/img/favicon.ico">
   <!-- CSS -->
-  <link rel="stylesheet" href="/bliki/assets/css/main.css?202008150829" type="text/css">
+  <link rel="stylesheet" href="/bliki/assets/css/main.css?202008150842" type="text/css">
 </head>
 
   <body>
@@ -68,7 +68,7 @@
 
 
 <div class="meta">
-    31st October 2019
+    12th August 2020
 </div>
 
 <small class="meta">
