--- a/etc/hello-world/index.html
+++ b/etc/hello-world/index.html
@@ -32,7 +32,7 @@
   <!-- Icons -->
   <link rel="shortcut icon" href="/bliki/assets/img/favicon.ico">
   <!-- CSS -->
-  <link rel="stylesheet" href="/bliki/assets/css/main.css?202008161940" type="text/css">
+  <link rel="stylesheet" href="/bliki/assets/css/main.css?202008221039" type="text/css">
 </head>
 
 <body>
@@ -82,7 +82,11 @@
 
 
 <article>
-  <p>Here’s why I gave up all those wide spread of productivity and notes taking apps from Evernote to Onenote, Workflowy, Trello, Todoist, and even Notion. They are all great apps, but it makes more sense, at least for me, to use GitHub since I interact with it daily, so why not use it for everything else. <em>GitHub used to be my unicorn, and now it is my bitch</em>. Just a personal preference, with <img class="emoji" title=":heart:" alt=":heart:" src="https://github.githubassets.com/images/icons/emoji/unicode/2764.png" height="20" width="20"> of course.</p>
+  
+    <blockquote></blockquote>
+  
+  
+  <p>Here’s why I gave up all those wide spread of productivity and notes taking apps from Evernote to Onenote, Workflowy, Trello, Todoist, and even Notion. They are all great apps, but it makes more sense, at least for me, to use GitHub since I interact with it daily, so why not use it for everything else. <em>GitHub used to be my unicorn, and now it is my bitch</em>, with <img class="emoji" title=":heart:" alt=":heart:" src="https://github.githubassets.com/images/icons/emoji/unicode/2764.png" height="20" width="20"> of course. Just a personal preference.</p>
 
 <p>In case you were wondering, this site is:</p>
 
