--- a/etc/productivity-tools/index.html
+++ b/etc/productivity-tools/index.html
@@ -20,11 +20,11 @@
 
   <title>
     
-      Hello world :wave: &middot; #bliki
+      Productivity tools &middot; #bliki
     
   </title>
 
-  <link rel="canonical" href="https://kosalanuwan.github.io/bliki/etc/hello-world/">
+  <link rel="canonical" href="https://kosalanuwan.github.io/bliki/etc/productivity-tools/">
   <link rel="alternate" type="application/rss+xml" title="RSS Feed for #bliki" href="https://kosalanuwan.github.io/bliki/atom.xml">
   <!-- Fonts -->
   <link rel="dns-prefetch" href="//fonts.googleapis.com">
@@ -56,8 +56,7 @@
   </div>
   <hr>
   <div class="container">
-    <h2>Hello world <img class="emoji" title=":wave:" alt=":wave:" src="https://github.githubassets.com/images/icons/emoji/unicode/1f44b.png" height="20" width="20">
-</h2>
+    <h2>Productivity tools</h2>
 
 
 
@@ -86,26 +85,59 @@
     <blockquote></blockquote>
   
   
-  <p>Here’s why I gave up all those wide spread of productivity and notes taking apps from Evernote to Onenote, Workflowy, Trello, Todoist, and even Notion. They are all great apps, but it makes more sense, at least for me, to use GitHub since I interact with it daily, so why not use it for everything else. <em>GitHub used to be my unicorn, and now it is my bitch</em>, with <img class="emoji" title=":heart:" alt=":heart:" src="https://github.githubassets.com/images/icons/emoji/unicode/2764.png" height="20" width="20"> of course. Just a personal preference.</p>
+  <p>Here’s my deliberate efforts to stay productive and plan out my days. These tools and techniques are based on my personal preference and what works for me my not work for you. Also, I may have literally let go of some of these, with <img class="emoji" title=":heart:" alt=":heart:" src="https://github.githubassets.com/images/icons/emoji/unicode/2764.png" height="20" width="20"> of course, for employers and clientele preferences. For starters, you want to have a look at Scot Hanselman’s talk <a href="https://www.youtube.com/watch?v=IWPgUn8tL8s">on Scaling Yourself</a>.</p>
 
-<p>In case you were wondering, this site is:</p>
+<h3 id="contents">Contents</h3>
 
 <ul>
-  <li>
-<img class="emoji" title=":lock:" alt=":lock:" src="https://github.githubassets.com/images/icons/emoji/unicode/1f512.png" height="20" width="20"> Designed from the <a href="https://github.com/kosalanuwan/otto-theme">Otto Theme</a>
-</li>
-  <li>Coded with <a href="https://github.com/microsoft/vscode">VS Code</a>
-</li>
-  <li>Built on <a href="https://github.com/envygeeks/jekyll-docker">Jekyll Docker</a>
-</li>
-  <li>Published with <a href="https://github.com/peaceiris/actions-gh-pages">GitHub Actions for GitHub Pages</a>, and</li>
-  <li>Hosted on <a href="https://github.com/kosalanuwan/kosalanuwan.github.io">GitHub Pages</a>
+  <li><a href="#notes">Notes</a></li>
+  <li><a href="#task-tracking">Task Tracking</a></li>
+  <li><a href="#reminders">Reminders</a></li>
+  <li><a href="#emails">Emails</a></li>
+</ul>
+
+<h3 id="notes">Notes</h3>
+
+<p>I interact with <a href="https://github.com/kosalanuwan">GitHub</a> daily so why not use it for everything else.</p>
+
+<ul>
+  <li>Written in <a href="">Markdown</a> using <a href="">Paper app</a>
 </li>
 </ul>
 
-<p>And, this article amongst rest are written in <a href="">Markdown</a> with <a href="">Paper app</a>.</p>
+<p>Current employer use <a href="">Sharepoint</a> for various documentation and templates, and some of the former employers used <a href="">Confluence</a> and <a href="">Google Sites</a>. Same goes when it comes to clientele.</p>
 
-<p>For starters, you want to have a look at <a href="">Docsify</a>. It is a documentation site generator with <a href="">a great community support</a>. <a href="">Awesome Docsify</a> is a good source of information. <a href="">I played around a bit with Docsify</a> and <a href="">wrote a plugin or two</a> as well for my needs, but that was before I picked Jekyll and it’s still a work in-progress.</p>
+<h3 id="task-tracking">Task Tracking</h3>
+
+<p>Everything’s on <a href="https://github.com/join">GitHub</a>:</p>
+
+<ul>
+  <li>
+<a href="">GitHub Issues</a> for task and bug tracking</li>
+  <li>
+<a href="">Milestones</a> for road maps and sprint planning, and</li>
+  <li>
+<a href="">Labels</a> to categorize based on features, bugs, and whatnot</li>
+</ul>
+
+<p>Current employer has homegrown enterprise tools with <a href="">Microsoft Project</a>. Former employers had <a href="">JIRA</a>, and back in the days this is done using speadsheets. Current client uses <a href="">Agile Boards on Azure</a> and former clients also had <a href="">JIRA</a> and <a href="">TFS</a>.</p>
+
+<h3 id="reminders">Reminders</h3>
+
+<ul>
+  <li><a href="">Google Calendar</a></li>
+</ul>
+
+<p>It has always been a <em>calendar</em> to schedule meetings, appointments, reminders et al. whether it’s personal or work. Current and former employers and clientele have been either on <a href="">Outlook</a> or <a href="">G-suite</a>.</p>
+
+<h3 id="emails">Emails</h3>
+
+<ul>
+  <li>
+<a href="">Rules on Microsoft Outlook</a> to filter emails and meeting invites</li>
+</ul>
+
+<p>You want to have a look at Scott Hanselman’s article <a href="https://www.hanselman.com/blog/TheThreeMostImportantOutlookRulesForProcessingMail.aspx">on Outlook rules for processing emails</a>.</p>
 
 </article>
   </div>
