--- a/etc/productivity-tools/index.html
+++ b/etc/productivity-tools/index.html
@@ -32,7 +32,7 @@
   <!-- Icons -->
   <link rel="shortcut icon" href="/bliki/assets/img/favicon.ico">
   <!-- CSS -->
-  <link rel="stylesheet" href="/bliki/assets/css/main.css?202008221816" type="text/css">
+  <link rel="stylesheet" href="/bliki/assets/css/main.css?202008221904" type="text/css">
 </head>
 
 <body>
@@ -85,31 +85,39 @@
     <blockquote></blockquote>
   
   
-  <p>Here’s my deliberate efforts to stay productive and plan out my days. These tools and techniques are based on my personal preference and what works for me my not work for you. Also, I may have literally let go of some of these, with <img class="emoji" title=":heart:" alt=":heart:" src="https://github.githubassets.com/images/icons/emoji/unicode/2764.png" height="20" width="20"> of course, for employers and clientele preferences. For starters, you want to have a look at Scot Hanselman’s talk <a href="https://www.youtube.com/watch?v=IWPgUn8tL8s">on Scaling Yourself</a>.</p>
+  <p>Here’s my deliberate efforts to stay productive and plan out my daily routines. These tools and techniques are based on my personal preference and what works for me my not work for you. Also, I may have literally let go of some of these, with <img class="emoji" title=":heart:" alt=":heart:" src="https://github.githubassets.com/images/icons/emoji/unicode/2764.png" height="20" width="20"> of course, for employers and clientele preferences. For starters, you want to have a look at Scot Hanselman’s talk <a href="https://www.youtube.com/watch?v=IWPgUn8tL8s">on Scaling Yourself</a>.</p>
 
 <h3 id="contents">Contents</h3>
 
 <ul>
-  <li><a href="#notes">Notes</a></li>
-  <li><a href="#task-tracking">Task Tracking</a></li>
-  <li><a href="#reminders">Reminders</a></li>
-  <li><a href="#emails">Emails</a></li>
+  <li>
+<a href="#notes">Notes</a> written in markdown using <a href="">Paper app</a>
+</li>
+  <li>
+<a href="#task-tracking">Task Tracking</a> using <a href="https://github.com/kosalanuwan">GitHub</a>
+</li>
+  <li>
+<a href="#reminders">Reminders</a> and invites on a calendar</li>
+  <li>
+<a href="#emails">Emails</a> are filtered using Outlook rules</li>
+  <li>
+<a href="#reading">Reading</a> as in books are only on Audible</li>
+  <li>
+<a href="#budgets">Budgets</a> are planned monthly using Google Keep</li>
 </ul>
 
-<h3 id="notes">Notes</h3>
+<p>I interact with GitHub daily so <a href="/bliki/hello-world/">why not use it for everything else</a>.</p>
 
-<p>I interact with <a href="https://github.com/kosalanuwan">GitHub</a> daily so why not use it for everything else.</p>
+<h3 id="notes">Notes</h3>
 
 <ul>
   <li>Written in <a href="">Markdown</a> using <a href="">Paper app</a>
 </li>
 </ul>
 
-<p>Current employer use <a href="">Sharepoint</a> for various documentation and templates, and some of the former employers used <a href="">Confluence</a> and <a href="">Google Sites</a>. Same goes when it comes to clientele.</p>
+<p>Previously used OneNote, Evernote, Workflowy, Dropbox Paper, and even Notion.</p>
 
 <h3 id="task-tracking">Task Tracking</h3>
-
-<p>Everything’s on <a href="https://github.com/join">GitHub</a>:</p>
 
 <ul>
   <li>
@@ -120,7 +128,7 @@
 <a href="">Labels</a> to categorize based on features, bugs, and whatnot</li>
 </ul>
 
-<p>Current employer has homegrown enterprise tools with <a href="">Microsoft Project</a>. Former employers had <a href="">JIRA</a>, and back in the days this is done using speadsheets. Current client uses <a href="">Agile Boards on Azure</a> and former clients also had <a href="">JIRA</a> and <a href="">TFS</a>.</p>
+<p>These are just to keep track of various projects and not to plan my daily routines. Previously used Trello, Todoist, and even Asana.</p>
 
 <h3 id="reminders">Reminders</h3>
 
@@ -128,16 +136,34 @@
   <li><a href="">Google Calendar</a></li>
 </ul>
 
-<p>It has always been a <em>calendar</em> to schedule meetings, appointments, reminders et al. whether it’s personal or work. Current and former employers and clientele have been either on <a href="">Outlook</a> or <a href="">G-suite</a>.</p>
+<p>Previously tried Workflowy, Microsoft Todo, Trello, but it has always been a <em>calendar</em> when scheduling meetings, appointments, reminders et al. whether it’s personal or work.</p>
 
 <h3 id="emails">Emails</h3>
 
 <ul>
   <li>
-<a href="">Rules on Microsoft Outlook</a> to filter emails and meeting invites</li>
+<a href="">Rules on Microsoft Outlook</a> to filter and process emails and meeting invites</li>
 </ul>
 
 <p>You want to have a look at Scott Hanselman’s article <a href="https://www.hanselman.com/blog/TheThreeMostImportantOutlookRulesForProcessingMail.aspx">on Outlook rules for processing emails</a>.</p>
+
+<h3 id="reading">Reading</h3>
+
+<ul>
+  <li>
+<a href="">Audible app</a> on the go</li>
+</ul>
+
+<p>I am a snail-pace-reader and the credit goes to one of my former colleagues, <a href="https://github.com/hasithy">@hasithy</a>, for showing how keep using Audible. Still reads a chapter or two from a book occationally, to get inspiration <a href="/books/">for fiction writing</a>.</p>
+
+<h3 id="budgets">Budgets</h3>
+
+<ul>
+  <li>
+<a href="">Google Keep</a> as a simple list of to-dos with the amount</li>
+</ul>
+
+<p>Previously tried many apps, but Keep seemed to work for more than just a couple of years consistantly.</p>
 
 </article>
   </div>
