deploy: kosalanuwan/gh-bliki-site@28893e2e1640c77be7aef56164207ad71b976bae

--- a/etc/productivity-tools/index.html
+++ b/etc/productivity-tools/index.html
@@ -32,7 +32,7 @@
   <!-- Icons -->
   <link rel="shortcut icon" href="/bliki/assets/img/favicon.ico">
   <!-- CSS -->
-  <link rel="stylesheet" href="/bliki/assets/css/main.css?202008221904" type="text/css">
+  <link rel="stylesheet" href="/bliki/assets/css/main.css?202008221917" type="text/css">
 </head>
 
 <body>
@@ -154,7 +154,7 @@
 <a href="">Audible app</a> on the go</li>
 </ul>
 
-<p>I am a snail-pace-reader and the credit goes to one of my former colleagues, <a href="https://github.com/hasithy">@hasithy</a>, for showing how keep using Audible. Still reads a chapter or two from a book occationally, to get inspiration <a href="/books/">for fiction writing</a>.</p>
+<p>Credit goes to former colleague and a dear friend, <a href="https://github.com/hasith">@hasith</a>, for showing how keep up using Audible as I’m a snail-paced reader, and still reads a chapter or two from books occationally <a href="/books/">to get inspiration for fiction writing</a>.</p>
 
 <h3 id="budgets">Budgets</h3>
 
@@ -163,7 +163,7 @@
 <a href="">Google Keep</a> as a simple list of to-dos with the amount</li>
 </ul>
 
-<p>Previously tried many apps, but Keep seemed to work for more than just a couple of years consistantly.</p>
+<p>Previously tried many apps and even spreadsheets but Keep seemed to work consistantly more than a couple of years.</p>
 
 </article>
   </div>
