--- a/bookmarks/gh-sites/index.html
+++ b/bookmarks/gh-sites/index.html
@@ -32,7 +32,7 @@
   <!-- Icons -->
   <link rel="shortcut icon" href="/bliki/assets/img/favicon.ico">
   <!-- CSS -->
-  <link rel="stylesheet" href="/bliki/assets/css/main.css?202008221917" type="text/css">
+  <link rel="stylesheet" href="/bliki/assets/css/main.css?202008230924" type="text/css">
 </head>
 
 <body>
@@ -85,7 +85,7 @@
     <blockquote>Curated list of online resources referred during the past building and deploying github sites using jekyll, liquid, and markdown.</blockquote>
   
   
-  <h3 id="software">Software</h3>
+  <h3 id="dev-tools">Dev Tools</h3>
 
 <ul>
   <li>
@@ -95,6 +95,13 @@
 <h3 id="plugins">Plugins</h3>
 
 <ul>
+  <li>
+<a href="https://docsify.js.org/">Docsify JS</a> is a JS-based alternative approach to Jekyll
+    <ul>
+      <li>Contributors hangout <a href="https://discord.gg/drxw8sq">at discord.com</a>
+</li>
+    </ul>
+  </li>
   <li>
 <a href="https://shields.io/">Shields.io</a> is the go-to place for badges</li>
   <li>
@@ -170,22 +177,6 @@
 </li>
   <li>
 <a href="https://app.pluralsight.com/paths/skills/collaborative-coding-with-github">Coding with GitHub</a> Learner path on Pluralsight</li>
-</ul>
-
-<h3 id="documentation">Documentation</h3>
-
-<ul>
-  <li>
-<a href="https://github.com/alertbox/bookworm">Bookworm</a> repository has some templates for <a href="https://github.com/alertbox/bookworm/blob/master/CONTRIBUTING.md"><code class="language-plaintext highlighter-rouge">CONTRIBUTING.md</code></a>, <a href="https://github.com/alertbox/bookworm/blob/master/README.md"><code class="language-plaintext highlighter-rouge">README.md</code></a>, and <a href="https://github.com/alertbox/bookworm/blob/master/.gitignore"><code class="language-plaintext highlighter-rouge">.gitignore</code></a>
-</li>
-  <li>
-<a href="https://github.com/Microsoft/vscode/wiki/How-to-Contribute">VS Code</a>, <a href="https://github.com/facebook/flow">Flow</a>, <a href="https://github.com/babel">Babel</a>, <a href="https://github.com/parcel-bundler/parcel/blob/v2/CONTRIBUTING.md">Parcel JS Bundler</a> repos also have good documentation</li>
-  <li>
-<a href="http://contributor-covenant.org/">Contributor Covenant</a> for Code of Conduct</li>
-  <li>
-<a href="https://opencollective.com/">Open Collective</a> for sponsorships</li>
-  <li>
-<a href="https://flow.org/en/docs/usage/">Flow</a> and <a href="https://babeljs.io/docs/en/usage">Babel</a> sites for Usage and Getting Started Guides</li>
 </ul>
 
 </article>
