deploy: kosalanuwan/gh-bliki-site@d54d92ad9cecf50748b54dce1c7f7f0c06d14f10

--- a/bookmarks/gh-and-git/index.html
+++ b/bookmarks/gh-and-git/index.html
@@ -32,7 +32,7 @@
   <!-- Icons -->
   <link rel="shortcut icon" href="/bliki/assets/img/favicon.ico">
   <!-- CSS -->
-  <link rel="stylesheet" href="/bliki/assets/css/main.css?202008230924" type="text/css">
+  <link rel="stylesheet" href="/bliki/assets/css/main.css?202008231028" type="text/css">
 </head>
 
 <body>
@@ -85,10 +85,24 @@
     <blockquote>Curated list of online resources referred during the past when using GitHub and git.</blockquote>
   
   
-  <h3 id="courses">Courses</h3>
+  <h3 id="conventional-commits">Conventional Commits</h3>
+
+<ul>
+  <li><a href="https://www.conventionalcommits.org/en/v1.0.0/#summary">The official conventional commits guide</a></li>
+  <li><a href="https://github.com/angular/angular/blob/master/CONTRIBUTING.md#commit">The original guide introduced by the Angular team</a></li>
+  <li>
+<a href="https://docs.google.com/document/d/1QrDFcIiPjSLDn3EL15IJygNPiHORgU1_OOAqWjiDU5Y/edit">Git commit message conventions with examples</a> discusses the objectives and examples of commit messages</li>
+  <li>
+<a href="https://docs.github.com/en/github/managing-your-work-on-github/linking-a-pull-request-to-an-issue#linking-a-pull-request-to-an-issue-using-a-keyword">Link issues and pull requests using commit messages</a> is useful to close issues when the pull requests are merged</li>
+</ul>
+
+<h5 id="cli-tools">CLI Tools</h5>
+
 <ul>
   <li>
-<a href="https://www.youtube.com/playlist?list=PLg7s6cbtAD17uAwaZwiykDci_q3te3CTY">Free Classes by GitHub Training &amp; Guides</a> is playlist with series of how-tos on various GitHub features</li>
+<a href="https://github.com/conventional-changelog/standard-version">Standard Version</a> is a CLI tool by <a href="https://github.com/conventional-changelog">Conventional Changelog</a> used to bump-up version according to semver and to generate CHANGELOG based on conventional commits</li>
+  <li>
+<a href="https://github.com/conventional-changelog/commitlint">Commit Lint</a> is another CLI tool to verify commit messages and suggest corrections</li>
 </ul>
 
 <h3 id="documentation">Documentation</h3>
@@ -105,6 +119,13 @@
 <a href="https://opencollective.com/">Open Collective</a> for sponsorships</li>
   <li>
 <a href="https://flow.org/en/docs/usage/">Flow</a> and <a href="https://babeljs.io/docs/en/usage">Babel</a> sites for Usage and Getting Started Guides</li>
+</ul>
+
+<h3 id="courses">Courses</h3>
+
+<ul>
+  <li>
+<a href="https://www.youtube.com/playlist?list=PLg7s6cbtAD17uAwaZwiykDci_q3te3CTY">Free Classes by GitHub Training &amp; Guides</a> is playlist with series of how-tos on various GitHub features</li>
 </ul>
 
 </article>
