deploy: kosalanuwan/gh-bliki-site@c08b7374880a0efc4a3fb157b7e7364ed173741c

--- a/bookmarks/gh-and-git/index.html
+++ b/bookmarks/gh-and-git/index.html
@@ -32,7 +32,7 @@
   <!-- Icons -->
   <link rel="shortcut icon" href="/bliki/assets/img/favicon.ico">
   <!-- CSS -->
-  <link rel="stylesheet" href="/bliki/assets/css/main.css?202008231028" type="text/css">
+  <link rel="stylesheet" href="/bliki/assets/css/main.css?202008231338" type="text/css">
 </head>
 
 <body>
@@ -108,6 +108,9 @@
 <h3 id="documentation">Documentation</h3>
 
 <ul>
+  <li>
+<a href="https://github.com/ikatyang/emoji-cheat-sheet">Emoji cheat sheet</a> generated via <a href="https://api.github.com/emojis">GitHub Emoji API</a>
+</li>
   <li>
 <a href="https://github.com/alertbox/bookworm">Bookworm</a> repository has some templates for <a href="https://github.com/alertbox/bookworm/blob/master/CONTRIBUTING.md"><code class="language-plaintext highlighter-rouge">CONTRIBUTING.md</code></a>, <a href="https://github.com/alertbox/bookworm/blob/master/README.md"><code class="language-plaintext highlighter-rouge">README.md</code></a>, and <a href="https://github.com/alertbox/bookworm/blob/master/.gitignore"><code class="language-plaintext highlighter-rouge">.gitignore</code></a>
 </li>
