--- a/etc/personal-productivity/index.html
+++ b/etc/personal-productivity/index.html
@@ -20,11 +20,11 @@
 
   <title>
     
-      Productivity tools &middot; #bliki
+      Personal productivity &middot; #bliki
     
   </title>
 
-  <link rel="canonical" href="https://kosalanuwan.github.io/bliki/etc/productivity-tools/">
+  <link rel="canonical" href="https://kosalanuwan.github.io/bliki/etc/personal-productivity/">
   <link rel="alternate" type="application/rss+xml" title="RSS Feed for #bliki" href="https://kosalanuwan.github.io/bliki/atom.xml">
   <!-- Fonts -->
   <link rel="dns-prefetch" href="//fonts.googleapis.com">
@@ -32,7 +32,7 @@
   <!-- Icons -->
   <link rel="shortcut icon" href="/bliki/assets/img/favicon.ico">
   <!-- CSS -->
-  <link rel="stylesheet" href="/bliki/assets/css/main.css?202008231028" type="text/css">
+  <link rel="stylesheet" href="/bliki/assets/css/main.css?202008231338" type="text/css">
 </head>
 
 <body>
@@ -56,7 +56,7 @@
   </div>
   <hr>
   <div class="container">
-    <h2>Productivity tools</h2>
+    <h2>Personal productivity</h2>
 
 
 
@@ -71,7 +71,7 @@
 </div>
 
 <small class="meta">
-    1 minute read
+    2 minute read
 </small>
 
 <div class="twitter-button">
@@ -85,7 +85,7 @@
     <blockquote></blockquote>
   
   
-  <p>Here’s my deliberate efforts to stay productive and plan out my daily routines. These tools and techniques are based on my personal preference and what works for me my not work for you. Also, I may have literally let go of some of these, with <img class="emoji" title=":heart:" alt=":heart:" src="https://github.githubassets.com/images/icons/emoji/unicode/2764.png" height="20" width="20"> of course, for employers and clientele preferences. For starters, you want to have a look at Scot Hanselman’s talk <a href="https://www.youtube.com/watch?v=IWPgUn8tL8s">on Scaling Yourself</a>.</p>
+  <p>Here’s my <em>deliberate efforts</em> to keep dancing. These tools and techniques are based on my personal preference and probably might not work for you. Also, I may have literally let go of some of these, with <img class="emoji" title=":heart:" alt=":heart:" src="https://github.githubassets.com/images/icons/emoji/unicode/2764.png" height="20" width="20"> of course, for the preference of my employers and clientele. For starters, you want to have a look at the <a href="https://www.youtube.com/playlist?list=PL1emq-Tbw7AG2yr7uxrnHLZpznSt_dX-z">Productivity 101 playlist on YouTube</a>.</p>
 
 <h3 id="contents">Contents</h3>
 
@@ -94,19 +94,25 @@
 <a href="#notes">Notes</a> written in markdown using <a href="">Paper app</a>
 </li>
   <li>
-<a href="#task-tracking">Task Tracking</a> using <a href="https://github.com/kosalanuwan">GitHub</a>
+<a href="#task-tracking">Task tracking</a> using <a href="https://github.com/kosalanuwan">GitHub</a>
 </li>
   <li>
-<a href="#reminders">Reminders</a> and invites on a calendar</li>
+<a href="#todo-list">Todo list</a> of <em>ahaa moments</em> using <a href="">GitHub app</a>
+</li>
   <li>
-<a href="#emails">Emails</a> are filtered using Outlook rules</li>
+<a href="#reminders">Reminders</a> are always on a calendar</li>
   <li>
-<a href="#reading">Reading</a> as in books are only on Audible</li>
+<a href="#emails">Emails</a> are filtered using <a href="">Outlook rules</a>
+</li>
   <li>
-<a href="#budgets">Budgets</a> are planned monthly using Google Keep</li>
+<a href="#reading">Reading</a> as in books are only on <a href="">Audible app</a>
+</li>
+  <li>
+<a href="#budgets">Budgets</a> are planned monthly using <a href="">Google Keep</a>
+</li>
 </ul>
 
-<p>I interact with GitHub daily so <a href="/bliki/hello-world/">why not use it for everything else</a>.</p>
+<p>I interact with GitHub daily so <a href="/bliki/hello-world/">why not use it for everything else</a>. I’m that nerd <img class="emoji" title=":nerd_face:" alt=":nerd_face:" src="https://github.githubassets.com/images/icons/emoji/unicode/1f913.png" height="20" width="20">!</p>
 
 <h3 id="notes">Notes</h3>
 
@@ -117,7 +123,7 @@
 
 <p>Previously used OneNote, Evernote, Workflowy, Dropbox Paper, and even Notion.</p>
 
-<h3 id="task-tracking">Task Tracking</h3>
+<h3 id="task-tracking">Task tracking</h3>
 
 <ul>
   <li>
@@ -128,12 +134,21 @@
 <a href="">Labels</a> to categorize based on features, bugs, and whatnot</li>
 </ul>
 
-<p>These are just to keep track of various projects and not to plan my daily routines. Previously used Trello, Todoist, and even Asana.</p>
+<p>This is to keep a track of todos on various projects. Not meant to plan my daily routines. Previously used Trello, Todoist, and even Asana.</p>
+
+<h3 id="todo-list">Todo list</h3>
+
+<ul>
+  <li>A todos repo <a href="https://github.com/kosalanuwan/todos">on GitHub</a>
+</li>
+</ul>
+
+<p>It is a neverending backlog of <em>ahaa thoughts</em>. You want to try out <a href="">GitHub app on the mobile</a>. Previously used Google Keep, Trello, and Microsoft Todo app.</p>
 
 <h3 id="reminders">Reminders</h3>
 
 <ul>
-  <li><a href="">Google Calendar</a></li>
+  <li><a href="https://calendar.google.com">Google Calendar</a></li>
 </ul>
 
 <p>Previously tried Workflowy, Microsoft Todo, Trello, but it has always been a <em>calendar</em> when scheduling meetings, appointments, reminders et al. whether it’s personal or work.</p>
@@ -142,19 +157,20 @@
 
 <ul>
   <li>
-<a href="">Rules on Microsoft Outlook</a> to filter and process emails and meeting invites</li>
+<a href="">Microsoft Outlook Rules</a> to filter and process emails and meeting invites</li>
 </ul>
 
-<p>You want to have a look at Scott Hanselman’s article <a href="https://www.hanselman.com/blog/TheThreeMostImportantOutlookRulesForProcessingMail.aspx">on Outlook rules for processing emails</a>.</p>
+<p>You want to have a look at <a href="https://www.hanselman.com/blog/TheThreeMostImportantOutlookRulesForProcessingMail.aspx">Scott Hanselman’s article on Outlook rules for processing emails</a>.</p>
 
 <h3 id="reading">Reading</h3>
 
 <ul>
-  <li>
-<a href="">Audible app</a> on the go</li>
+  <li>Audio books purchased from <a href="https://audible.com">Audible</a>
+</li>
+  <li>Listens using <a href="">Audible app</a> while on the go</li>
 </ul>
 
-<p>Credit goes to former colleague and a dear friend, <a href="https://github.com/hasith">@hasith</a>, for showing how keep up using Audible as I’m a snail-paced reader, and still reads a chapter or two from books occationally <a href="/books/">to get inspiration for fiction writing</a>.</p>
+<p>Credit goes to former colleague and a dear friend, <a href="https://github.com/hasith">@hasith</a>, for showing how to keep up using Audible. I’m a snail-paced reader, still reads a chapter or two occationally <a href="/books/">to get inspiration for fiction writing</a>.</p>
 
 <h3 id="budgets">Budgets</h3>
 
@@ -163,7 +179,7 @@
 <a href="">Google Keep</a> as a simple list of to-dos with the amount</li>
 </ul>
 
-<p>Previously tried many apps and even spreadsheets but Keep seemed to work consistantly more than a couple of years.</p>
+<p>Previously tried many apps and even spreadsheets but that doesn’t seemed to work consistantly for not more than a few months.</p>
 
 </article>
   </div>
