--- a/bookmarks/gh-and-git/index.html
+++ b/bookmarks/gh-and-git/index.html
@@ -32,7 +32,7 @@
   <!-- Icons -->
   <link rel="shortcut icon" href="/bliki/assets/img/favicon.ico">
   <!-- CSS -->
-  <link rel="stylesheet" href="/bliki/assets/css/main.css?202008231338" type="text/css">
+  <link rel="stylesheet" href="/bliki/assets/css/main.css?202008231657" type="text/css">
 </head>
 
 <body>
@@ -82,10 +82,34 @@
 
 <article>
   
-    <blockquote>Curated list of online resources referred during the past when using GitHub and git.</blockquote>
+    <blockquote>Curated list of online resources referred during the past when doing OSS work using GitHub and git.</blockquote>
   
   
-  <h3 id="conventional-commits">Conventional Commits</h3>
+  <h3 id="software-and-tools">Software and Tools</h3>
+
+<ul>
+  <li><a href="https://git-scm.com/downloads">Git and GitBash</a></li>
+  <li>
+<a href="https://cli.github.com/">GitHub CLI</a> is still on beta</li>
+  <li><a href="https://desktop.github.com/">GitHub Desktop app</a></li>
+</ul>
+
+<h5 id="vs-code-extensions">VS Code Extensions</h5>
+
+<ul>
+  <li>
+<img class="emoji" title=":+1:" alt=":+1:" src="https://github.githubassets.com/images/icons/emoji/unicode/1f44d.png" height="20" width="20"> <a href="https://marketplace.visualstudio.com/items?itemName=eamodio.gitlens">Git Lens by Eric Amodio</a> annotates valuable git insights seemlessly on the code editor</li>
+  <li>
+<img class="emoji" title=":+1:" alt=":+1:" src="https://github.githubassets.com/images/icons/emoji/unicode/1f44d.png" height="20" width="20"> <a href="https://marketplace.visualstudio.com/items?itemName=mhutchie.git-graph">Git Graph by Michael Hutchison</a> visualize git activities of the repository</li>
+  <li>
+<a href="https://marketplace.visualstudio.com/items?itemName=donjayamanne.githistory">Git History by Don Jayamanne</a> shows the log, file history, and compare branches or commits</li>
+  <li>
+<a href="https://marketplace.visualstudio.com/items?itemName=waderyan.gitblame">Git Blame by Wade Anderson</a> shows the last edited author in the statusbar</li>
+  <li>
+<a href="https://marketplace.visualstudio.com/items?itemName=GitHub.vscode-pull-request-github">GitHub for VS Code</a> allows you to review and manage pull requests and issues</li>
+</ul>
+
+<h3 id="conventional-commits">Conventional Commits</h3>
 
 <ul>
   <li><a href="https://www.conventionalcommits.org/en/v1.0.0/#summary">The official conventional commits guide</a></li>
