deploy: kosalanuwan/gh-bliki-site@5eed27506255f226354c7463c92358c2ecf7e36f

--- a/etc/personal-productivity/index.html
+++ b/etc/personal-productivity/index.html
@@ -32,7 +32,7 @@
   <!-- Icons -->
   <link rel="shortcut icon" href="/bliki/assets/img/favicon.ico">
   <!-- CSS -->
-  <link rel="stylesheet" href="/bliki/assets/css/main.css?202008231657" type="text/css">
+  <link rel="stylesheet" href="/bliki/assets/css/main.css?202008231706" type="text/css">
 </head>
 
 <body>
@@ -85,7 +85,7 @@
     <blockquote></blockquote>
   
   
-  <p>Here’s my <em>deliberate efforts</em> to keep dancing. These tools and techniques are based on my personal preference and probably might not work for you. Also, I may have literally let go of some of these, with <img class="emoji" title=":heart:" alt=":heart:" src="https://github.githubassets.com/images/icons/emoji/unicode/2764.png" height="20" width="20"> of course, for the preference of my employers and clientele. For starters, you want to have a look at the <a href="https://www.youtube.com/playlist?list=PL1emq-Tbw7AG2yr7uxrnHLZpznSt_dX-z">Productivity 101 playlist on YouTube</a>.</p>
+  <p>Here’s my <em>deliberate efforts</em> to keep dancing. These tools and techniques are based on my personal preference and probably might work for you as well. Also, I may have literally let go of some of these, with <img class="emoji" title=":heart:" alt=":heart:" src="https://github.githubassets.com/images/icons/emoji/unicode/2764.png" height="20" width="20"> of course, for the preference of my employers and clientele. For starters, you want to have a look at the <a href="https://www.youtube.com/playlist?list=PL1emq-Tbw7AG2yr7uxrnHLZpznSt_dX-z">Productivity 101 playlist on YouTube</a>.</p>
 
 <h3 id="contents">Contents</h3>
 
@@ -176,7 +176,7 @@
 
 <ul>
   <li>
-<a href="">Google Keep</a> as a simple list of to-dos with the amount</li>
+<a href="">Google Keep</a> as a simple list of expenses with the budgeted amount</li>
 </ul>
 
 <p>Previously tried many apps and even spreadsheets but that doesn’t seemed to work consistantly for not more than a few months.</p>
