--- a/etc/personal-productivity/index.html
+++ b/etc/personal-productivity/index.html
@@ -32,7 +32,7 @@
   <!-- Icons -->
   <link rel="shortcut icon" href="/bliki/assets/img/favicon.ico">
   <!-- CSS -->
-  <link rel="stylesheet" href="/bliki/assets/css/main.css?202008231706" type="text/css">
+  <link rel="stylesheet" href="/bliki/assets/css/main.css?202008240833" type="text/css">
 </head>
 
 <body>
@@ -117,8 +117,7 @@
 <h3 id="notes">Notes</h3>
 
 <ul>
-  <li>Written in <a href="">Markdown</a> using <a href="">Paper app</a>
-</li>
+  <li><a href="/bliki/hello-world/">Written in markdown using Paper app</a></li>
 </ul>
 
 <p>Previously used OneNote, Evernote, Workflowy, Dropbox Paper, and even Notion.</p>
@@ -139,11 +138,12 @@
 <h3 id="todo-list">Todo list</h3>
 
 <ul>
-  <li>A todos repo <a href="https://github.com/kosalanuwan/todos">on GitHub</a>
-</li>
+  <li><a href="https://github.com/kosalanuwan/todos">Private repository on GitHub</a></li>
+  <li>
+<a href="">GitHub Issues</a> for each todo item</li>
 </ul>
 
-<p>It is a neverending backlog of <em>ahaa thoughts</em>. You want to try out <a href="">GitHub app on the mobile</a>. Previously used Google Keep, Trello, and Microsoft Todo app.</p>
+<p>It is a neverending list of <em>ahaa thoughts!</em> You want to try out <a href="">GitHub app on the mobile</a>. Previously used Google Keep, Trello, and Microsoft Todo app.</p>
 
 <h3 id="reminders">Reminders</h3>
 
