deploy: kosalanuwan/gh-bliki-site@6bd32e82d0ce863aa089c6a2ca20d4d36ca69397

--- a/etc/personal-productivity/index.html
+++ b/etc/personal-productivity/index.html
@@ -32,7 +32,7 @@
   <!-- Icons -->
   <link rel="shortcut icon" href="/bliki/assets/img/favicon.ico">
   <!-- CSS -->
-  <link rel="stylesheet" href="/bliki/assets/css/main.css?202008241153" type="text/css">
+  <link rel="stylesheet" href="/bliki/assets/css/main.css?202008241203" type="text/css">
 </head>
 
 <body>
@@ -138,12 +138,14 @@
 <h3 id="todo-list">Todo list</h3>
 
 <ul>
-  <li><a href="https://github.com/kosalanuwan/todos">Private repository on GitHub</a></li>
+  <li>
+<img class="emoji" title=":lock:" alt=":lock:" src="https://github.githubassets.com/images/icons/emoji/unicode/1f512.png" height="20" width="20"> <a href="https://github.com/kosalanuwan/todos">Todos repository on GitHub</a>
+</li>
   <li>
 <a href="">GitHub Issues</a> for each todo item</li>
 </ul>
 
-<p>It is a neverending list of <em>ahaa thoughts!</em> You want to try out <a href="">GitHub app on the mobile</a>. Previously used Google Keep, Trello, and Microsoft Todo app.</p>
+<p>It seems like a pretty fantastic idea in lieu of traditional Trello, Todoist, Microsoft Todo, Google Keep, and the like. You want to try out <a href="">GitHub app on the mobile</a>.</p>
 
 <h3 id="reminders">Reminders</h3>
 
