deploy: kosalanuwan/gh-bliki-site@e26717cd6cb0a00fac31c1a3ddf80970af423419

--- a/bookmarks/gh-and-git/index.html
+++ b/bookmarks/gh-and-git/index.html
@@ -32,7 +32,7 @@
   <!-- Icons -->
   <link rel="shortcut icon" href="/bliki/assets/img/favicon.ico">
   <!-- CSS -->
-  <link rel="stylesheet" href="/bliki/assets/css/main.css?202008241203" type="text/css">
+  <link rel="stylesheet" href="/bliki/assets/css/main.css?202008241632" type="text/css">
 </head>
 
 <body>
@@ -43,7 +43,7 @@
 <header>
 
     <h1>
-      <a href="/">
+      <a href="https://kosalanuwan.github.io/bliki/">
         <span>#</span>bliki
       </a>
     </h1>
