deploy: kosalanuwan/gh-bliki-site@2313cb9d39d4fb0398c0885e1c912f07240ec151

--- a/404.html
+++ b/404.html
@@ -30,7 +30,7 @@
   <!-- Icons -->
   <link rel="shortcut icon" href="/bliki/assets/img/favicon.ico">
   <!-- CSS -->
-  <link rel="stylesheet" href="/bliki/assets/css/main.css?202008241632" type="text/css">
+  <link rel="stylesheet" href="/bliki/assets/css/main.css?202008241642" type="text/css">
 </head>
 
 <body>
@@ -41,7 +41,7 @@
 <header>
 
     <h1>
-      <a href="https://kosalanuwan.github.io/bliki/">
+      <a href="https://kosalanuwan.github.io">
         <span>#</span>bliki
       </a>
     </h1>
