--- a/coding/webapi-message-handlers/index.html
+++ b/coding/webapi-message-handlers/index.html
@@ -32,7 +32,7 @@
   <!-- Icons -->
   <link rel="shortcut icon" href="/bliki/assets/img/favicon.ico">
   <!-- CSS -->
-  <link rel="stylesheet" href="/bliki/assets/css/main.css?202008241642" type="text/css">
+  <link rel="stylesheet" href="/bliki/assets/css/main.css?202008241700" type="text/css">
 </head>
 
 <body>
@@ -43,7 +43,7 @@
 <header>
 
     <h1>
-      <a href="https://kosalanuwan.github.io">
+      <a href="/bliki/">
         <span>#</span>bliki
       </a>
     </h1>
