deploy: kosalanuwan/gh-bliki-site@f62d2a840f69c63420030849c6e52582ac79b05b

--- a/bookmarks/gh-sites/index.html
+++ b/bookmarks/gh-sites/index.html
@@ -32,7 +32,7 @@
   <!-- Icons -->
   <link rel="shortcut icon" href="/bliki/assets/img/favicon.ico">
   <!-- CSS -->
-  <link rel="stylesheet" href="/bliki/assets/css/main.css?202008241700" type="text/css">
+  <link rel="stylesheet" href="/bliki/assets/css/main.css?202008241834" type="text/css">
 </head>
 
 <body>
@@ -85,11 +85,11 @@
     <blockquote>Curated list of online resources referred during the past building and deploying github sites using jekyll, liquid, and markdown.</blockquote>
   
   
-  <h3 id="dev-tools">Dev Tools</h3>
+  <h3 id="software--tools">Software &amp; Tools</h3>
 
 <ul>
   <li>
-<a href="/hello-world/">Hello world</a> article has the links to all the dev tools</li>
+<a href="/hello-world/">Hello world article</a> pretty much covers all the dev tools and apps I use</li>
 </ul>
 
 <h3 id="plugins">Plugins</h3>
