--- a/bookmarks/gh-and-git/index.html
+++ b/bookmarks/gh-and-git/index.html
@@ -32,7 +32,7 @@
   <!-- Icons -->
   <link rel="shortcut icon" href="/bliki/assets/img/favicon.ico">
   <!-- CSS -->
-  <link rel="stylesheet" href="/bliki/assets/css/main.css?202008241700" type="text/css">
+  <link rel="stylesheet" href="/bliki/assets/css/main.css?202008241834" type="text/css">
 </head>
 
 <body>
@@ -85,13 +85,15 @@
     <blockquote>Curated list of online resources referred during the past when doing OSS work using GitHub and git.</blockquote>
   
   
-  <h3 id="software-and-tools">Software and Tools</h3>
+  <h3 id="software--tools">Software &amp; Tools</h3>
 
 <ul>
   <li><a href="https://git-scm.com/downloads">Git and GitBash</a></li>
   <li>
-<a href="https://cli.github.com/">GitHub CLI</a> is still on beta</li>
+<a href="https://cli.github.com/">GitHub CLI</a> for interacting  via Terminal</li>
   <li><a href="https://desktop.github.com/">GitHub Desktop app</a></li>
+  <li>
+<a href="">Paper app</a> for markdown editing</li>
 </ul>
 
 <h5 id="vs-code-extensions">VS Code Extensions</h5>
