deploy: kosalanuwan/gh-bliki-site@2bbfbcc5de9b4f89024876f42a885a8c8d88a4b2

--- a/bookmarks/gh-sites/index.html
+++ b/bookmarks/gh-sites/index.html
@@ -32,7 +32,7 @@
   <!-- Icons -->
   <link rel="shortcut icon" href="/bliki/assets/img/favicon.ico">
   <!-- CSS -->
-  <link rel="stylesheet" href="/bliki/assets/css/main.css?202008241834" type="text/css">
+  <link rel="stylesheet" href="/bliki/assets/css/main.css?202008250244" type="text/css">
 </head>
 
 <body>
@@ -89,7 +89,7 @@
 
 <ul>
   <li>
-<a href="/hello-world/">Hello world article</a> pretty much covers all the dev tools and apps I use</li>
+<a href="/etc/hello-world/">Hello world article</a> pretty much covers all the dev tools and apps I use</li>
 </ul>
 
 <h3 id="plugins">Plugins</h3>
