--- a/etc/personal-productivity/index.html
+++ b/etc/personal-productivity/index.html
@@ -32,7 +32,7 @@
   <!-- Icons -->
   <link rel="shortcut icon" href="/bliki/assets/img/favicon.ico">
   <!-- CSS -->
-  <link rel="stylesheet" href="/bliki/assets/css/main.css?202008241834" type="text/css">
+  <link rel="stylesheet" href="/bliki/assets/css/main.css?202008250244" type="text/css">
 </head>
 
 <body>
@@ -117,7 +117,7 @@
 <h3 id="notes">Notes</h3>
 
 <ul>
-  <li><a href="/bliki/hello-world/">Written in markdown using Paper app</a></li>
+  <li><a href="/etc/hello-world/">Written in markdown using Paper app</a></li>
 </ul>
 
 <p>Previously used OneNote, Evernote, Workflowy, Dropbox Paper, and even Notion.</p>
