deploy: kosalanuwan/gh-bliki-site@bad2db0a42a4e91d3e9b21d85595325f7898488a

--- a/bookmarks/gh-and-git/index.html
+++ b/bookmarks/gh-and-git/index.html
@@ -32,7 +32,7 @@
   <!-- Icons -->
   <link rel="shortcut icon" href="/bliki/assets/img/favicon.ico">
   <!-- CSS -->
-  <link rel="stylesheet" href="/bliki/assets/css/main.css?202008250244" type="text/css">
+  <link rel="stylesheet" href="/bliki/assets/css/main.css?202008250317" type="text/css">
 </head>
 
 <body>
@@ -90,7 +90,7 @@
 <ul>
   <li><a href="https://git-scm.com/downloads">Git and GitBash</a></li>
   <li>
-<a href="https://cli.github.com/">GitHub CLI</a> for interacting  via Terminal</li>
+<a href="https://cli.github.com/">GitHub CLI</a> to try GitHub on the terminal</li>
   <li><a href="https://desktop.github.com/">GitHub Desktop app</a></li>
   <li>
 <a href="">Paper app</a> for markdown editing</li>
