--- a/bookmarks/gh-sites/index.html
+++ b/bookmarks/gh-sites/index.html
@@ -32,7 +32,7 @@
   <!-- Icons -->
   <link rel="shortcut icon" href="/bliki/assets/img/favicon.ico">
   <!-- CSS -->
-  <link rel="stylesheet" href="/bliki/assets/css/main.css?202008250244" type="text/css">
+  <link rel="stylesheet" href="/bliki/assets/css/main.css?202008250317" type="text/css">
 </head>
 
 <body>
@@ -141,6 +141,8 @@
 </li>
   <li>
 <a href="http://solutionoptimist.com/awesome-github-tricks/">Host Web Apps and Images</a> article on how to use GitHub as a CDN</li>
+  <li>
+<a href="https://stackoverflow.com/a/9195560/257727">Linking to other posts and pages</a> has eerything need to know to properly link posts from other pages</li>
 </ul>
 
 <h5 id="general-guides">General Guides</h5>
