deploy: kosalanuwan/gh-bliki-site@9a7f1214eeba5da6598e9cb7374eed359a51bd3c

--- a/awesome/gh-and-git/index.html
+++ b/awesome/gh-and-git/index.html
@@ -11,7 +11,7 @@
   <meta name="description" content="&lt;a href=&quot;https://kosalanuwan.github.io&quot;&gt;&lt;span&gt;@&lt;/span&gt;kosalanuwan&lt;/a&gt;'s developer journal. This bliki, its content, and opinions are my own.">
 
   
-    <meta name="keywords" content="bookmarks">
+    <meta name="keywords" content="awesome">
   
 
   
@@ -24,7 +24,7 @@
     
   </title>
 
-  <link rel="canonical" href="https://kosalanuwan.github.io/bliki/bookmarks/gh-and-git/">
+  <link rel="canonical" href="https://kosalanuwan.github.io/bliki/awesome/gh-and-git/">
   <link rel="alternate" type="application/rss+xml" title="RSS Feed for #bliki" href="https://kosalanuwan.github.io/bliki/atom.xml">
   <!-- Fonts -->
   <link rel="dns-prefetch" href="//fonts.googleapis.com">
@@ -32,7 +32,7 @@
   <!-- Icons -->
   <link rel="shortcut icon" href="/bliki/assets/img/favicon.ico">
   <!-- CSS -->
-  <link rel="stylesheet" href="/bliki/assets/css/main.css?202008250321" type="text/css">
+  <link rel="stylesheet" href="/bliki/assets/css/main.css?202008260545" type="text/css">
 </head>
 
 <body>
@@ -150,11 +150,30 @@
 <a href="https://flow.org/en/docs/usage/">Flow</a> and <a href="https://babeljs.io/docs/en/usage">Babel</a> sites for Usage and Getting Started Guides</li>
 </ul>
 
+<h3 id="videos">Videos</h3>
+
+<ul>
+  <li>
+<a href="https://vimeo.com/72955426">More Git &amp; GitHub Secrets by Zach Holman</a> reveals hidden and not so hidden tips and tricks</li>
+</ul>
+
 <h3 id="courses">Courses</h3>
 
 <ul>
   <li>
 <a href="https://www.youtube.com/playlist?list=PLg7s6cbtAD17uAwaZwiykDci_q3te3CTY">Free Classes by GitHub Training &amp; Guides</a> is playlist with series of how-tos on various GitHub features</li>
+</ul>
+
+<h3 id="community">Community</h3>
+
+<ul>
+  <li>
+<a href="https://github.com/tiimgreen/github-cheat-sheet#readme">Git and GitHub Secrets</a> has awesome list of tips and tricks</li>
+  <li>
+<a href="http://bilalarslan.me/git-cheat-sheet/">Git and Gitflow Cheat Sheet</a> is an awesome list of git commands</li>
+  <li>
+<a href="https://github.com/compscilauren/awesome-git-hooks#readme">Git Hooks Awesome List</a> contains everything need to know about hooking up custom scripts</li>
+  <li>
 </ul>
 
 </article>
