--- a/coding/vanilla-js-snippets/index.html
+++ b/coding/vanilla-js-snippets/index.html
@@ -32,7 +32,7 @@
   <!-- Icons -->
   <link rel="shortcut icon" href="/bliki/assets/img/favicon.ico">
   <!-- CSS -->
-  <link rel="stylesheet" href="/bliki/assets/css/main.css?202009050713" type="text/css">
+  <link rel="stylesheet" href="/bliki/assets/css/main.css?202009060504" type="text/css">
 </head>
 
 <body>
@@ -151,15 +151,15 @@
   <li><a href="https://github.com/esamattis/underscore.string">Underscore.string</a></li>
 </ul>
 
-<p>But, I don’t enjoy adding such libraries just for the sake of developer ease. Nowadays, vanilla javascript already cover most of it anyways and polyfills are there whenever some random browser doesn’t have the support.</p>
+<p>But, I don’t enjoy adding them just for the sake of developer ease. Nowadays, vanilla javascript already cover most of it anyways and polyfills are there whenever some random browser doesn’t have the support.</p>
 
 <p><strong>Preferred approach</strong></p>
 
 <blockquote>
-  <p><a href="https://github.com/kosalanuwan/vanilla-js-snippets">I prefer mix and match snippets, helper methods, boilerplate code, and polyfills</a>.</p>
+  <p><a href="https://github.com/kosalanuwan/vanilla-js-snippets">I prefer mix and match snippets, helper methods, boilerplate code, polyfills et. al.</a>.</p>
 </blockquote>
 
-<p>For that, I do dig deep into those major javascript utility libraries and polyfills in order to pull out what is needed. Luckily, they are all opensourced, with <img class="emoji" title=":heart:" alt=":heart:" src="https://github.githubassets.com/images/icons/emoji/unicode/2764.png" height="20" width="20"> of course!</p>
+<p>For that, I <strong>do</strong> dig deep into any javascript code, libraries, frameworks in order to pull out what is needed, with <img class="emoji" title=":heart:" alt=":heart:" src="https://github.githubassets.com/images/icons/emoji/unicode/2764.png" height="20" width="20"> of course. Luckily, they are all opensourced!</p>
 
 <ul>
   <li>I peek into <a href="https://github.com/Financial-Times/polyfill-library">Financial Time’s polyfill library</a>
